--- a/init.macallan.rc
+++ b/init.macallan.rc
@@ -114,8 +114,8 @@ on boot
 
 # LED
     chown system system /sys/class/leds/white_led_en1/brightness
+    chmod 0664 /sys/class/leds/white_led_en1/brightness
     write /sys/class/leds/white_led_en1/brightness 0
-    chmod 0444 /sys/class/leds/white_led_en1/brightness
 
 # Sensor
     chown system system /sys/bus/iio/devices/iio:device0/als_value
@@ -217,6 +217,16 @@ on boot
 
     # TODO: Remove once powerhal takes over app profiles
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    
+    chown system system /sys/kernel/debug/clock/override.c2bus/state
+    chown system system /sys/kernel/debug/clock/override.c2bus/rate
+    chown system system /sys/kernel/debug/clock/override.c3bus/state
+    chown system system /sys/kernel/debug/clock/override.c3bus/rate
+    
+    chmod 0664 /sys/kernel/debug/clock/override.c2bus/state
+    chmod 0664 /sys/kernel/debug/clock/override.c2bus/rate
+    chmod 0664 /sys/kernel/debug/clock/override.c3bus/state
+    chmod 0664 /sys/kernel/debug/clock/override.c3bus/rate
 
 # Charging stop
     chown system system /sys/devices/platform/tegra11-i2c.0/i2c-0/0-006b/charging_stop
