--- a/init.macallan.rc
+++ b/init.macallan.rc
@@ -194,7 +194,8 @@ on boot
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
-
+    write /sys/devices/system/cpu/cpufreq/interactive/boost_factor 0
+    write /sys/devices/system/cpu/cpufreq/interactive/sustain_load 0
     write /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/enable 1
     write /sys/devices/system/cpu/cpuquiet/current_governor balanced
     write /sys/module/cpuidle_t11x/parameters/cpu_power_gating_in_idle 31
@@ -202,7 +203,8 @@ on boot
     write /sys/module/cpuidle/parameters/power_down_in_idle 0
 
     chown system system /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/no_lp
-    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/go_maxspeed_load
+    chown system system /sys/devices/system/cpu/cpufreq/interactive/max_boost
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
     chown system system /sys/devices/tegradc.0/enable
     chown system system /sys/devices/tegradc.1/enable
@@ -303,7 +305,6 @@ on boot
 
 # RECOVERY
     chmod 0666 /cache/recovery/last_locale
-    write /proc/sys/kernel/panic 3
 
 # nvdps
     chown system system /sys/class/graphics/fb0/device/nvdps
@@ -316,8 +317,14 @@ on boot
     write /data/misc/wminput/connected 0
     chmod 0666 /data/misc/wminput/connected
 
-# set hwui properties depending on the screen resolution and the memory size
+# Set hwui properties depending on the screen resolution and the memory size
 service set_hwui_params /system/bin/set_hwui_params.sh
+    class main
+    user root
+    group root
+    oneshot
+
+service macallan-boot-sh /system/bin/sh /init.macallan.boot.sh
     class main
     user root
     group root
