--- a/init.usb.rc
+++ b/init.usb.rc
@@ -1,5 +1,4 @@
 # Copyright (C) 2012 The Android Open Source Project
-
 #
 # USB configuration common for all android devices
 #
@@ -18,12 +17,12 @@ on property:sys.usb.config=none
     setprop sys.usb.state ${sys.usb.config}
 
 # adb only USB configuration
-# This is the fallback configuration if the
-# USB manager fails to set a standard configuration
+# This should only be used during device bringup
+# and as a fallback if the USB manager fails to set a standard configuration
 on property:sys.usb.config=adb
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 18d1
-    write /sys/class/android_usb/android0/idProduct 4EE7
+    write /sys/class/android_usb/android0/idProduct D002
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     start adbd
@@ -89,4 +88,5 @@ on property:sys.usb.config=accessory,audio_source,adb
 # Used to set USB configuration at boot and to switch the configuration
 # when changing the default configuration
 on property:persist.sys.usb.config=*
+    setprop sys.usb.config none
     setprop sys.usb.config ${persist.sys.usb.config}
