--- a/init.macallan.rc
+++ b/init.macallan.rc
@@ -193,7 +193,7 @@ on boot
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor interactive
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
-    write /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/enable 1
+    write /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/enable 0
     write /sys/devices/system/cpu/cpuquiet/current_governor balanced
     write /sys/module/cpuidle_t11x/parameters/cpu_power_gating_in_idle 31
     write /sys/module/cpuidle_t11x/parameters/slow_cluster_power_gating_noncpu 1
@@ -219,9 +219,10 @@ on boot
 
     chown system system /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/down_delay
     chown system system /sys/devices/system/cpu/cpuquiet/tegra_cpuquiet/no_lp
-    chown system system /sys/devices/system/cpu/cpuquiet/balanced/core_bias
-    chown system system /sys/devices/system/cpu/cpuquiet/balanced/up_delay
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
+    chown system system /sys/devices/system/cpu/cpu1/online
+    chown system system /sys/devices/system/cpu/cpu2/online
+    chown system system /sys/devices/system/cpu/cpu3/online
     chown system system /sys/devices/tegradc.0/enable
     chown system system /sys/devices/tegradc.1/enable
     chown system system /sys/devices/platform/host1x/nvavp/boost_sclk
@@ -244,6 +245,7 @@ on boot
     chown system system /sys/kernel/debug/clock/override.c3bus/rate
     chown system system /sys/kernel/debug/clock/override.emc/state
     chown system system /sys/kernel/debug/clock/override.emc/rate
+    chown system system /sys/kernel/cluster/active
     
     chmod 0664 /sys/kernel/debug/clock/override.c2bus/state
     chmod 0664 /sys/kernel/debug/clock/override.c2bus/rate
@@ -251,6 +253,7 @@ on boot
     chmod 0664 /sys/kernel/debug/clock/override.c3bus/rate
     chmod 0664 /sys/kernel/debug/clock/override.emc/state
     chmod 0664 /sys/kernel/debug/clock/override.emc/rate
+    chmod 0664 /sys/kernel/cluster/active
 
 # Charging stop
     chown system system /sys/devices/platform/tegra11-i2c.0/i2c-0/0-006b/charging_stop
