--- a/init.macallan.rc
+++ b/init.macallan.rc
@@ -175,10 +175,10 @@ on boot
     #write /sys/module/tegra3_emc/parameters/emc_enable 0
     #write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1000000
 
-    #write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1810500
-    #write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1810500
-    #write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1810500
-    #write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1810500
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1606500
+    write /sys/devices/system/cpu/cpu1/cpufreq/scaling_max_freq 1606500
+    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_max_freq 1606500
+    write /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq 1606500
 
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor conservative
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor conservative
